--- a/settings.config
+++ b/settings.config
@@ -1,75 +1,65 @@
 {
   //-------------------------------------------------------------
   //
-  //en General settings
+  // General settings
   //
   //-------------------------------------------------------------
 
-  //en Friendly site name
+  // Friendly site name
   friendlySite:                               "fcf-example-moving-containers",
 
-  //en Full Site URL
+  // Full Site URL
   site:                                       "http://fcf-example-moving-containers",
 
-  //en Permission to install mirrors on the site
+  // Permission to install mirrors on the site
   avalibleMirrors:                            true,
 
-  //en Mail server for sending mail
+  // Mail server for sending mail
   mailService:                                "<mailService>",
 
-  //en Sender's Email address
+  // Sender's Email address
   mailAddress:                                "<email@email.com>",
 
-  //en User of the mail service for sending mail
+  // User of the mail service for sending mail
   mailUser:                                   "<mailuser>",
 
-  //en Password user of the mail service to send mail
+  // Password user of the mail service to send mail
   mailPassword:                               "<mail_user_pass>",
 
-  //en Port used when starting via fcfnode. When launched via fsfserver, the parameter specified in the server.json file is used
+  // Port used when starting via fcfnode. When launched via fsfserver, the parameter specified in the server.json file is used
   port:                                       8080,
 
   //en Maximum time to send a file
   maxFileSendTime:                            60*60,  // In seconds
 
-  //en Array of projection directories on database tables
+  // Array of projection directories on database tables
   projectionDirectories:                      ["projections"],
 
-  //en Enabled packages
+  // Enabled packages
   packages:                                   ["fcfManagement", "fcfSimpleAuthorization"],
 
-  //en Array of additional configuration files
+  // Array of additional configuration files
   configs:                                    [],
 
-  //en The object containing the initial values of system variables.
-  //en The key is the full name of the system variable, and the value is a object with a description
-  systemVariables: {
-    "application:strings": {
-      description: "Output lines",
-      value: [
-          "Hello world",
-          "Javascript",
-          "CSS",
-          "HTML"
-        ],
-    }
+  //-------------------------------------------------------------
+  //
+  // Node dependencies
+  //
+  //-------------------------------------------------------------
+  // An object containing a list of NODEJS package dependencies.
+  // The key is the name of the NODEJS package. The value is an object with the version field.
+  // The version field stores the version number of the required package and may contain
+  // an additional version constraint in the form of qualifying constructs ">", ">=", "<", "<=".
+
+  nodeDependencies:{
+    // "[NODEJS_PACKAGE_NAME]": { version: "[VERSION]" },
+    // "[NODEJS_PACKAGE_NAME]": { version: ">=[VERSION]" },
+    // "[NODEJS_PACKAGE_NAME]": true,
   },
 
   //-------------------------------------------------------------
   //
-  //en fcfSimpleAuthorization module settings
-  //
-  //-------------------------------------------------------------
-
-  //en Permission to register users
-  fcfSimpleAuthorization_enableRegistration:  false,
-
-  //en Allowing a user to log in by email
-  fcfSimpleAuthorization_enableLoginByEmail:  false,
-
-  //-------------------------------------------------------------
-  //
-  //en Database connection settings
+  // Database connection settings
   //
   //-------------------------------------------------------------
 
@@ -88,7 +78,7 @@
 
   //-------------------------------------------------------------
   //
-  //en Router settings
+  // Router settings
   //
   //-------------------------------------------------------------
 
@@ -97,7 +87,7 @@
       uri:          "",
       controller:   "fcf:NServer/NControllers/Page.js",
       source:       "templates/pages/main-page.tmpl",
-      title:        "Moving containers",
+      title:        "FCF Application",
       description:  "Main page of the FCF application",
     },
     {
@@ -116,11 +106,6 @@
       source:       "translations",
     },
     {
-      uri:          "/files/*",
-      controller:   "fcf:NServer/NControllers/File.js",
-      source:       "files",
-    },
-    {
       uri:          "robots.txt",
       controller:   "fcf:NServer/NControllers/File.js",
       source:       "robots.txt",
@@ -130,7 +115,27 @@
 
   //-------------------------------------------------------------
   //
-  //en Views settings
+  // System variables
+  //
+  //-------------------------------------------------------------
+  // The object containing the initial values of system variables.
+  // The key is the full name of the system variable, and the value is a object with a description
+
+  systemVariables: {
+    "application:strings": {
+      description: "Output lines",
+      value: [
+          "Hello world",
+          "Javascript",
+          "CSS",
+          "HTML"
+        ],
+    }
+  },
+
+  //-------------------------------------------------------------
+  //
+  // Views settings
   //
   //-------------------------------------------------------------
 
@@ -138,10 +143,35 @@
     // List of types and templates
     // EXAMPLE:
     // "TYPE":{
-    //   "read.*": { template: "TEMPLATE_PATH" },
-    //   "edit.*": { template: "TEMPLATE_PATH" },
-    //   "add.*":  { template: "TEMPLATE_PATH" },
+    //   "read*": { template: "TEMPLATE_PATH" },
+    //   "edit*": { template: "TEMPLATE_PATH" },
+    //   "add*":  { template: "TEMPLATE_PATH" },
     // },
   },
+
+  //-------------------------------------------------------------
+  //
+  // defaultArgs settings
+  //
+  //-------------------------------------------------------------
+  // Overloads default argument values for templates
+
+  defaultArgs: {
+    // "[TEMPLATE_PATH]": {
+    //  "[ARG_NAME]" : [ARG_DEFAULT_VALUE]
+    // }
+  },
+
+  //-------------------------------------------------------------
+  //
+  // fcfSimpleAuthorization module settings
+  //
+  //-------------------------------------------------------------
+
+  // Permission to register users
+  fcfSimpleAuthorization_enableRegistration:  false,
+
+  // Allowing a user to log in by email
+  fcfSimpleAuthorization_enableLoginByEmail:  false,
 
 }
